--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,14 @@
   </head>
 
   <body>
+
+    <main class="container">
+
+    <%= render 'shared/navbar' %>
+    <%= render 'shared/alert' %>
     <%= yield %>
+
+    </main>
+  
   </body>
 </html>
