mod controlador article, devise:views, mod app-articles _form y _articles

--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -11,12 +11,12 @@
 
   <p>
     <strong>User:</strong>
-    <%= article.user_id %>
+    <%= article.user.email %>
   </p>
 
   <p>
     <strong>Brand:</strong>
-    <%= article.brand_id %>
+    <%= article.brand.name %>
   </p>
 
 </div>
