--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -26,10 +26,10 @@
     <%= form.text_field :user_id %>
   </div>
 
-  <div>
-    <%= form.label :brand_id, style: "display: block" %>
-    <%= form.text_field :brand_id %>
-  </div>
+  <%= form.collection_select :brand_id,
+        Brand.all,
+        :id,
+        :name %>
 
   <div>
     <%= form.submit %>
