--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -21,10 +21,10 @@
     <%= form.text_area :description %>
   </div>
 
-  <div>
+  <!--div>
     <%= form.label :user_id, style: "display: block" %>
     <%= form.text_field :user_id %>
-  </div>
+  </div-->
 
   <%= form.collection_select :brand_id,
         Brand.all,
