modificacion vista article - show

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,8 +3,18 @@
 <%= render @article %>
 
 <div>
-  <%= link_to "Edit this article", edit_article_path(@article) %> |
+  <% if user_signed_in? && (current_user.id == @article.user_id)%>
+
+  <%= link_to "Edit this article", edit_article_path(@article) %>
+  
+  <%= button_to "Destroy this article", @article, method: :delete %>
+
+  <% else %>
+
+  <% end %>
+
+
+
   <%= link_to "Back to articles", articles_path %>
 
-  <%= button_to "Destroy this article", @article, method: :delete %>
 </div>
