creación model articleTag, implementación en vistas de article los tags, correcciones varias

--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -19,4 +19,10 @@
     <%= article.brand.name %>
   </p>
 
+  <p>
+    <strong>Tags:</strong>
+    <%= article.tags.map(& :name).sort.join(' 🥨 ') %>
+  </p>
+
+
 </div>
