--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -12,22 +12,22 @@
   <% end %>
 
   <div>
-    <%= form.label :number, style: "display: block" %>
+    <%= form.label 'Cantidad de Artículos', style: "display: block" %>
     <%= form.number_field :number %>
   </div>
 
   <div>
-    <%= form.label :price, style: "display: block" %>
+    <%= form.label 'Precio Total', style: "display: block" %>
     <%= form.number_field :price %>
   </div>
 
   <div>
-    <%= form.label :place, style: "display: block" %>
+    <%= form.label 'Lugar de Envío', style: "display: block" %>
     <%= form.text_field :place %>
   </div>
 
   <div>
-    <%= form.label :user_id, style: "display: block" %>
+    <%= form.label 'Usuario', style: "display: block" %>
     <%= form.text_field :user_id %>
   </div>
 
