--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,8 @@
 <ul>
   <li><%= link_to 'Inicio', root_path %></li>
   <li><%= link_to 'Articulos', articles_path %></li>
+  <li><%= link_to 'Pedidos', orders_path %></li>
+
 </ul>
 <% if user_signed_in? %>
   <ul>
