--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,10 +1,16 @@
-<p style="color: green"><%= notice %></p>
-
 <%= render @order %>
 
 <div>
+  <% if user_signed_in? && (current_user.id == @order.user_id)%>
+
   <%= link_to "Edit this order", edit_order_path(@order) %> |
-  <%= link_to "Back to orders", orders_path %>
 
   <%= button_to "Destroy this order", @order, method: :delete %>
+
+    <% else %>
+  
+    <% end %>
+
+  <%= link_to "Back to orders", orders_path %>
+
 </div>
