--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -16,6 +16,9 @@
     <%= form.text_field :name %>
   </div>
 
+  <%= form.label :foto %>
+  <%= form.file_field :foto %>
+
   <div>
     <%= form.label :description, style: "display: block" %>
     <%= form.text_area :description %>
